added labels for sound types

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!-- 
+<!--
 This shall be a therminvox virtual synth. The basic functions of it will be:
 
 Change pitch/volume by moving a mouse up-down/left-right
 Change a root note/range
 lock into a scale.
-Perhaps have a couple different sound presets. 
+Perhaps have a couple different sound presets.
 Maybe a basic animation?
 Several people can play at the same time (several therminvoxes).
 fx/filters with different rooting options.
@@ -30,13 +30,13 @@ fx/filters UI looking as a patch-cord panel.
             Mr.Leo
         </title>
         <link rel="stylesheet" type="text/css" href="css/main.css">
-        
+
     </head>
     <body>
         <h1>Mr.Leo</h1>
         <div id="theremincontrol">
             <!-- TODO: find and insert an image of the theremin.-->
-            
+
         </div>
         <label for="choose-root">
         Root
@@ -44,16 +44,16 @@ fx/filters UI looking as a patch-cord panel.
         <select id="choose-root">
             <option value="C">C</option>
             <option value="D">D</option>
-            <option value="E">E</option>     
+            <option value="E">E</option>
         </select>
         <label for="choose-range">Range</label>
-        <input id="choose-range" name="choose-range" 
+        <input id="choose-range" name="choose-range"
                type="range" min="1" max="88">
         <label for="sound-presets">Presets</label>
         <radiogroup id="sound-presets">
-            <input type="radio" checked name="sound" value="square">
-            <input type="radio" checked name="sound" value="sine">
-            <input type="radio" checked name="sound" value="saw">
-        </radiogroup>        
+            <input type="radio" checked name="sound" value="square">Square
+            <input type="radio" checked name="sound" value="sine">Sine
+            <input type="radio" checked name="sound" value="saw">Saw
+        </radiogroup>
     </body>
 </html>
