root notes added

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@ fx/filters UI looking as a patch-cord panel.
             <option value="C">C</option>
             <option value="D">D</option>
             <option value="E">E</option>     
+            <option value="F">F</option>  
+            <option value="G">G</option>  
         </select>
         <label for="choose-range">Range</label>
         <input id="choose-range" name="choose-range" 
