--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ fx/filters UI looking as a patch-cord panel.
         <h1>Mr.Leo</h1>
         <div id="theremincontrol">
             <!-- TODO: find and insert an image of the theremin.-->
-            <img src = "images/Moog-Theremin-Standard.jpg" alt="ThereminPicture">
+            <img id = "thereminPic" src = "images/Moog-Theremin-Standard.jpg" alt="ThereminPicture">
         </div>
         <label for="choose-root">
         Root
