sound making has commenced

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@ fx/filters UI looking as a patch-cord panel.
             Mr.Leo
         </title>
         <link rel="stylesheet" type="text/css" href="css/main.css">
+        <script src="http://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
+        <script src="thereminGuts.js" type="text/javascript"></script>
 
     </head>
     <body>
@@ -37,6 +39,7 @@ fx/filters UI looking as a patch-cord panel.
         <div id="theremincontrol">
             <!-- TODO: find and insert an image of the theremin.-->
             <img id = "thereminPic" src = "images/Moog-Theremin-Standard.jpg" alt="ThereminPicture">
+            <!-- png picture -->
         </div>
         <label for="choose-root">
         Root
