--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@ fx/filters UI looking as a patch-cord panel.
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <script src="http://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
         <script src="thereminGuts.js" type="text/javascript"></script>
+        <script src = "node_modules/tone/build/Tone.min.js" type="text/javascript"></script>
 
     </head>
     <body>
         <h1>Mr.Leo</h1>
         <div id="theremincontrol">
             <!-- TODO: find and insert an image of the theremin.-->
-            <img id = "thereminPic" src = "images/Moog-Theremin-Standard.jpg" alt="ThereminPicture">
+            <img id = "thereminPic" src = "images/Moog-Theremin-Standard.png" alt="ThereminPicture">
             <!-- png picture -->
         </div>
         <label for="choose-root">
@@ -56,9 +57,9 @@ fx/filters UI looking as a patch-cord panel.
                type="range" min="1" max="88">
         <label for="sound-presets">Presets</label>
         <radiogroup id="sound-presets">
-            <input type="radio" checked name="sound" value="square">Square
+            <input type="radio"  name="sound" value="square">Square
             <input type="radio" checked name="sound" value="sine">Sine
-            <input type="radio" checked name="sound" value="saw">Saw
+            <input type="radio"  name="sound" value="sawtooth">Saw
         </radiogroup>
     </body>
 </html>
