added on/off button, mute on click

--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@ fx/filters UI looking as a patch-cord panel.
     </head>
     <body>
         <h1>Mr.Leo</h1>
-        <div id="theremincontrol">
-            <!-- TODO: find and insert an image of the theremin.-->
-            <img id = "thereminPic" src = "images/leo-test-01a-post.png" alt="ThereminPicture">
-            <!-- png picture -->
+        <div id="theremincontrol" draggable="false">
+            <img id = "thereminPic" src = "images/leo-test-01a-post.png" alt="ThereminPicture" draggable="false">
+            <div id="onButton"></div>
         </div>
         <label for="choose-root">
         Root
