--- a/index.html
+++ b/index.html
@@ -36,46 +36,14 @@ fx/filters UI looking as a patch-cord panel.
 </head>
 
 <body>
-  <h1>Mr.Leo</h1>
   <div id="theremincontrol" draggable="false">
-    <img id="thereminPic" src="images/leo-test-01a-post.png" alt="ThereminPicture" draggable="false">
-    <div id="onButton"></div>
+    <div class="container" draggable="false"></div>
+    <img id="thereminPic" src="images/leo-knobless.png" alt="ThereminPicture" draggable="false">
+    <img id="onButton" src="images/leo-chicken-knob.png" alt="ThereminPicture" draggable="false">
+    <img id="lightPower" src="images/leo-light-power.png" alt="ThereminPicture" draggable="false">
+    <img id="rootKnob" src="images/leo-standard-knob.png" alt="ThereminPicture" draggable="false">
+    <img id="rangeKnob" src="images/leo-standard-knob.png" alt="ThereminPicture" draggable="false">
   </div>
-  <label for="choose-root">
-    Root
-  </label>
-  <select id="choose-root">
-    <option value="C">C</option>
-    <option value="Csh">C#</option>
-    <option value="D">D</option>
-    <option value="Dsh">D#</option>
-    <option value="E">E</option>
-    <option value="F">F</option>
-    <option value="Fsh">F#</option>
-    <option value="G">G</option>
-    <option value="Gsh">G#</option>
-    <option value="A" selected>A</option>
-    <option value="Ash">A#</option>
-    <option value="B">B</option>
-  </select>
-  <label for="choose-octave">
-    Octave
-  </label>
-  <select id="choose-octave">
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4" selected>4</option>
-    <option value="5">5</option>
-  </select>
-  <label for="choose-range">Range</label>
-  <input id="choose-range" name="choose-range" type="number" value="25" min="13" max="49">
-  <label for="sound-presets">Presets</label>
-  <radiogroup id="sound-presets">
-    <input type="radio" name="sound" value="square">Square
-    <input type="radio" checked name="sound" value="sine">Sine
-    <input type="radio" name="sound" value="sawtooth">Saw
-  </radiogroup>
-
   <script src="node_modules/jquery/dist/jquery.min.js" type="text/javascript"></script>
   <script src="thereminGuts.js" type="text/javascript"></script>
   <script src="node_modules/tone/build/Tone.min.js" type="text/javascript"></script>
