--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ fx/filters UI looking as a patch-cord panel.
 </head>
 
 <body>
-  <div id="theremincontrol" draggable="false">
+  <div id="theremincontrol" draggable="true">
     <div class="container" draggable="false"></div>
     <img id="thereminPic" src="images/leo-knobless.png" alt="ThereminPicture" draggable="false">
     <img id="onButton" src="images/leo-chicken-knob.png" alt="ThereminPicture" draggable="false">
